Cascading Change Log

2.0.0 [unreleased]

  Changed c.s.h.TextDelimited and c.s.l.TextDelimited to optionally write headers if writeHeaders or hasHeaders
  is set to true. If Fields.ALL or Fields.UNKNOWN is declared, during sinking the field names will be resolved
  at runtime.

  Added the c.t.TupleCollectionFactory and c.t.TupleMapFactory interfaces and relevant implementations to allow
  custom c.t.Spillable types to be plugged into a given execution. Spillable types are used to back in memory
  collections to disk to improve scalability of c.p.CoGroup and c.p.Join pipes on different platforms.

  Fixed issue where a c.s.Scheme was not seeing properly resolved fields if they were not declared in the Scheme
  instance. This allows a Scheme declared to sink c.t.Fields#ALL to see the actual field names during the
  Scheme#sinkPrepare() and Scheme#sink() methods.

  Changed c.t.TupleEntrySchemeSelector#prepare method to protected and is now called lazily internally during
  the first add method. This should simplify custom c.t.Tap development and allows for lazily setting of resolved
  sink fields.

  Fixed issue where the grouping Tuple resulting from a c.p.CoGroup did not properly reflect all the current
  grouping keys and field names. This fix allows an c.o.Aggregator or c.o.Buffer see which fields are null, if at all,
  during an "outer" join type. resultGroupFields parameter now must reflect all joined fields as well.

  Fixed issue where a c.p.GroupBy merge of branches with the same names threw a NPE.

  Fixed issue where c.p.a.AggregateBy.AveragePartials functor was using fixed declared fields.

  Added the "cascading.aggregateby.threshold" property so that a default threshold can be set for the
  c.p.a.AggregateBy sub-assemblies.

  Added the c.m.UnitOfWork interface to give c.f.Flow and c.c.Cascade a common contract.

  Changed c.t.h.TupleSerialization#setSerializations() to force TupleSerialization and o.a.h.i.s.WritableSerialization