@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.0.0 [unreleased]
 
+  Fixed issue where a c.p.GroupBy following a c.p.Every could not see result Aggregator fields from the Every instance.
+
   Changed c.s.h.TextDelimited and c.s.l.TextDelimited to optionally write headers if writeHeaders or hasHeaders
   is set to true. If Fields.ALL or Fields.UNKNOWN is declared, during sinking the field names will be resolved
   at runtime.
